--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -40,3 +40,24 @@ section {
 .hero--text {
     margin-top: 0;
 }
+
+.gray {
+    color: #918E9B;
+}
+.card {
+    width: 175px;
+    font-size: 12px;
+}
+
+.card--image {
+    width: 100%;
+    border-radius: 9px;
+}
+.card--stats {
+    display: flex;
+    align-items: center;
+}
+
+.card--star {
+    height: 14px;
+}
